added NOtification stre and matrics apis
